<package>
  <name>sr_hand</name>
  <version>1.4.0</version>
  <description>This is a ROS interface to the Shadow Robot's robotic hand. It
     contains both an interface to the real hand (communicating via
     a CAN interface) and a simulated version of the hand. It also
     contains an interface to Shadow Robot's muscle arm.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://www.shadowrobot.com</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

  <author>Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>sr_utilities</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>rostest</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>sr_utilities</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend>gtest</test_depend>

</package>
