<package>
  <name>sr_hardware_interface</name>
  <version>1.2.0</version>
  <description>This package contains the actuator used in the hand model.</description>
  <maintainer email=" ugo@shadowrobot.com">Ugo Cupcic </maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_hardware_interface</url>
  <!-- <url type="bugtracker"></url> -->

  <author email=" ugo@shadowrobot.com">Ugo Cupcic </author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>pr2_hardware_interface</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>pr2_hardware_interface</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>pr2_hardware_interface</test_depend> -->

<export>
    <cpp cflags="-I${prefix}/include"/>
</export>

</package>