<package>
  <name>sr_hardware_interface</name>
  <version>1.4.0</version>
  <description>This package contains the actuator used in the hand model.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_hardware_interface</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

  <author>Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>ros_ethercat_hardware</build_depend>
  <build_depend>ros_ethercat_model</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>ros_ethercat_hardware</run_depend>
  <run_depend>ros_ethercat_model</run_depend>

</package>
