<package>
  <name>sr_kinematics</name>
  <version>1.3.4</version>
  <description>A specific shadowhand package derived from arm_kinematics, for computing both forward and backward kinematics for the fingers except thumb.
    Solution is analytic. Developed as an alternative to arm_kinematics that cannot solve coupled joints.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/arm_kinematics</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

  <author>David LU</author>
  <author>adapted for ShadowHand by Guillaume WALCK</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>orocos_kdl</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>moveit_core</run_depend>

</package>
