<package>
  <name>sr_mechanism_controllers</name>
  <version>1.3.5</version>
  <description>The sr_mechanism_controllers package contains different types of
     controllers for the etherCAT hand:(fake) calibration controllers,
     position controllers, velocity controllers, force controllers, ...</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_mechanism_controllers</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

  <author>Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>sr_utilities</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>robot_mechanism_controllers</build_depend>
  <build_depend>pr2_mechanism_controllers</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>sr_hardware_interface</build_depend>
  <build_depend>xmlrpcpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tinyxml</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>sr_utilities</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>robot_mechanism_controllers</run_depend>
  <run_depend>pr2_mechanism_controllers</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>sr_hardware_interface</run_depend>
  <run_depend>xmlrpcpp</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend>gtest</test_depend>

<export>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml"/>
</export>

</package>
