<package>
  <name>sr_mechanism_model</name>
  <version>1.2.0</version>
  <description>sr_mechanism_model contains the transmissions used in the robot model. We needed specific
    transmission as we're using our own actuator. We also needed to take care of the joint 0s
    which combine the distal and middle phalanges.</description>
  <maintainer email=" ugo@shadowrobot.com ">Ugo Cupcic </maintainer>
  <maintainer email="">contact@shadowrobot.com</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_mechanism_model</url>
  <!-- <url type="bugtracker"></url> -->

  <author email=" ugo@shadowrobot.com ">Ugo Cupcic </author>
  <author>contact@shadowrobot.com</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>sr_hardware_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>sr_hardware_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>sr_hardware_interface</test_depend> -->
  <!-- <test_depend>pr2_mechanism_model</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib -lsr_mechanism_model -Wl,-rpath,${prefix}/lib" cflags="-I${prefix}/include"/>
    <pr2_mechanism_model plugin="${prefix}/transmission_plugin.xml"/>
</export>

</package>