<package>
  <name>sr_mechanism_model</name>
  <version>1.2.0</version>
  <description>sr_mechanism_model contains the transmissions used in the robot model. We needed specific
    transmission as we're using our own actuator. We also needed to take care of the joint 0s
    which combine the distal and middle phalanges.</description>
  <maintainer email="ugo@shadowrobot.com">Ugo Cupcic </maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_mechanism_model</url>

  <author email="ugo@shadowrobot.com">Ugo Cupcic </author>
  <author>contact@shadowrobot.com</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>sr_hardware_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>tinyxml</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>sr_hardware_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>

<export>
    <pr2_mechanism_model plugin="${prefix}/transmission_plugin.xml"/>
</export>

</package>