<package>
  <name>sr_mechanism_model</name>
  <version>1.4.0</version>
  <description>sr_mechanism_model contains the transmissions used in the robot model. We needed specific
    transmission as we're using our own actuator. We also needed to take care of the joint 0s
    which combine the distal and middle phalanges.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_mechanism_model</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

  <author>Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>sr_hardware_interface</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>ros_ethercat_model</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>sr_hardware_interface</run_depend>
  <run_depend>tinyxml</run_depend>
  <run_depend>ros_ethercat_model</run_depend>

<export>
    <ros_ethercat_model plugin="${prefix}/transmission_plugin.xml"/>
</export>

</package>
